--- a/Makefile.in
+++ b/Makefile.in
@@ -19,6 +19,8 @@ AWK := @GAWK@
 SED := @GSED@
 PATH := $(INSTALL_DIR)/bin:$(PATH)
 
+CPU_CORES := $(shell nproc 2>/dev/null || sysctl -n hw.ncpu 2>/dev/null || getconf _NPROCESSORS_ONLN 2>/dev/null || echo 1)
+
 # Check to see if we need wrapper scripts for awk/sed (which point to
 # gawk/gsed on platforms where these aren't the default), otherwise
 # don't override these as the wrappers don't always work.
@@ -96,7 +98,7 @@ stamps/build-binutils-linux: $(srcdir)/riscv-binutils-gdb
 		@with_guile@ \
 		--disable-werror \
 		--disable-nls
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install
 	mkdir -p $(dir $@) && touch $@
 
@@ -141,7 +143,7 @@ stamps/build-glibc-linux-%: $(srcdir)/riscv-glibc stamps/build-gcc-linux-stage1
 		--enable-kernel=3.0.0 \
 		$(GLIBC_TARGET_FLAGS) \
 		$($@_LIBDIROPTS)
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	+flock $(SYSROOT)/.lock $(MAKE) -C $(notdir $@) install install_root=$(SYSROOT)
 	mkdir -p $(dir $@) && touch $@
 
@@ -173,9 +175,9 @@ stamps/build-gcc-linux-stage1: $(srcdir)/riscv-gcc stamps/build-binutils-linux \
 		$(MULTILIB_FLAGS) \
 		$(WITH_ABI) \
 		$(WITH_ARCH)
-	$(MAKE) -C $(notdir $@) inhibit-libc=true all-gcc
+	$(MAKE) -C $(notdir $@) inhibit-libc=true all-gcc -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) inhibit-libc=true install-gcc
-	$(MAKE) -C $(notdir $@) inhibit-libc=true all-target-libgcc
+	$(MAKE) -C $(notdir $@) inhibit-libc=true all-target-libgcc -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) inhibit-libc=true install-target-libgcc
 	mkdir -p $(dir $@) && touch $@
 
@@ -201,7 +203,7 @@ stamps/build-gcc-linux-stage2: $(srcdir)/riscv-gcc $(addprefix stamps/build-glib
 		$(MULTILIB_FLAGS) \
 		$(WITH_ABI) \
 		$(WITH_ARCH)
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install
 	cp -a $(INSTALL_DIR)/$(LINUX_TUPLE)/lib* $(SYSROOT)
 	mkdir -p $(dir $@) && touch $@
@@ -215,7 +217,7 @@ stamps/build-binutils-newlib: $(srcdir)/riscv-binutils-gdb
 		--prefix=$(INSTALL_DIR) \
 		@with_guile@ \
 		--disable-werror
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install
 	mkdir -p $(dir $@) && touch $@
 
@@ -243,7 +245,7 @@ stamps/build-gcc-newlib-stage1: $(srcdir)/riscv-gcc stamps/build-binutils-newlib
 		$(WITH_ABI) \
 		$(WITH_ARCH) \
 		CFLAGS_FOR_TARGET="-Os $(CFLAGS_FOR_TARGET)"
-	$(MAKE) -C $(notdir $@) all-gcc
+	$(MAKE) -C $(notdir $@) all-gcc -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install-gcc
 	mkdir -p $(dir $@) && touch $@
 
@@ -258,7 +260,7 @@ stamps/build-newlib: $(srcdir)/riscv-newlib stamps/build-gcc-newlib-stage1
 		--enable-newlib-io-long-long \
 		--enable-newlib-io-c99-formats \
 		CFLAGS_FOR_TARGET="-Os $(CFLAGS_FOR_TARGET)"
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install
 	mkdir -p $(dir $@) && touch $@
 
@@ -286,7 +288,7 @@ stamps/build-gcc-newlib-stage2: $(srcdir)/riscv-gcc stamps/build-newlib
 		$(WITH_ABI) \
 		$(WITH_ARCH) \
 		CFLAGS_FOR_TARGET="-Os $(CFLAGS_FOR_TARGET)"
-	$(MAKE) -C $(notdir $@)
+	$(MAKE) -C $(notdir $@) -j$(CPU_CORES)
 	$(MAKE) -C $(notdir $@) install
 	mkdir -p $(dir $@) && touch $@
 
